@@ -23,12 +23,12 @@ import is.codion.common.model.UserPreferences;
 import is.codion.common.user.User;
 import is.codion.demos.chinook.model.ChinookAppModel;
 import is.codion.demos.chinook.model.TrackTableModel;
+import is.codion.plugin.flatlaf.intellij.themes.materialtheme.MaterialTheme;
 import is.codion.swing.common.ui.component.combobox.Completion;
 import is.codion.swing.common.ui.component.table.FilterTable;
 import is.codion.swing.common.ui.component.table.FilterTableCellRenderer;
 import is.codion.swing.common.ui.control.Control;
 import is.codion.swing.common.ui.control.Controls;
-import is.codion.swing.common.ui.laf.LookAndFeelProvider;
 import is.codion.swing.framework.model.SwingEntityModel;
 import is.codion.swing.framework.ui.EntityApplicationPanel;
 import is.codion.swing.framework.ui.EntityEditPanel;
@@ -39,7 +39,6 @@ import is.codion.swing.framework.ui.ReferentialIntegrityErrorHandling;
 import is.codion.swing.framework.ui.TabbedDetailLayout;
 import is.codion.swing.framework.ui.icon.FrameworkIcons;
 
-import com.formdev.flatlaf.intellijthemes.FlatAllIJThemes;
 import org.kordamp.ikonli.foundation.Foundation;
 
 import javax.swing.ButtonGroup;
@@ -49,7 +48,6 @@ import javax.swing.JRadioButton;
 import javax.swing.JTable;
 import javax.swing.SwingConstants;
 import java.awt.Dimension;
-import java.util.Arrays;
 import java.util.List;
 import java.util.Locale;
 import java.util.Optional;
@@ -66,12 +64,11 @@ import static javax.swing.JOptionPane.showMessageDialog;
 
 public final class ChinookAppPanel extends EntityApplicationPanel<ChinookAppModel> {
 
-	private static final String DEFAULT_FLAT_LOOK_AND_FEEL = "com.formdev.flatlaf.intellijthemes.materialthemeuilite.FlatMaterialDarkerIJTheme";
 	private static final String LANGUAGE_PREFERENCES_KEY = ChinookAppPanel.class.getSimpleName() + ".language";
 	private static final String LANGUAGE_IS = "is";
 	private static final String LANGUAGE_EN = "en";
-	private static final Locale LOCALE_IS = new Locale(LANGUAGE_IS, "IS");
-	private static final Locale LOCALE_EN = new Locale(LANGUAGE_EN, "EN");
+	private static final Locale LOCALE_IS = Locale.of(LANGUAGE_IS, "IS");
+	private static final Locale LOCALE_EN = Locale.of(LANGUAGE_EN, "EN");
 
 	private static final String SELECT_LANGUAGE = "select_language";
 
@@ -174,7 +171,6 @@ public final class ChinookAppPanel extends EntityApplicationPanel<ChinookAppMode
 	public static void main(String[] args) throws CancelException {
 		String language = UserPreferences.getUserPreference(LANGUAGE_PREFERENCES_KEY, Locale.getDefault().getLanguage());
 		Locale.setDefault(LANGUAGE_IS.equals(language) ? LOCALE_IS : LOCALE_EN);
-		Arrays.stream(FlatAllIJThemes.INFOS).forEach(LookAndFeelProvider::addLookAndFeel);
 		FrameworkIcons.instance().add(Foundation.PLUS, Foundation.MINUS);
 		Completion.COMPLETION_MODE.set(Completion.Mode.AUTOCOMPLETE);
 		EntityPanel.Config.TOOLBAR_CONTROLS.set(true);
@@ -193,7 +189,7 @@ public final class ChinookAppPanel extends EntityApplicationPanel<ChinookAppMode
 						.applicationName("Chinook")
 						.domainType(DOMAIN)
 						.applicationVersion(ChinookAppModel.VERSION)
-						.defaultLookAndFeelClassName(DEFAULT_FLAT_LOOK_AND_FEEL)
+						.defaultLookAndFeel(MaterialTheme.class)
 						.defaultLoginUser(User.parse("scott:tiger"))
 						.displayStartupDialog(false)
 						.start();
